--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -1,2 +1,17 @@
 name: Run tests
 on: push
+jobs:
+  execute_tests:
+    name: Install requirements and execute tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Update
+        run: sudo apt update
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Install pip
+        run: sudo apt install python3-pip
+      - name: Install requirements
+        run: pip install -r requirements.txt
+      - name: Execute tests
+        run: python manage.py test
